Add examples to GroupsEndpoints
