# docs/03-endpoints/generated-openapi/openapi-admin-api.yml
@@ -1,7 +1,7 @@
 openapi: 3.1.0
 info:
   title: webapi-admin-api
-  version: v30.8.2-38-g47cc5cd-dirty-doc-polish-openapi-documentation
+  version: v30.8.2-39-ga824d36-dirty-doc-polish-openapi-documentation
 servers:
 - url: http://localhost:3333
   description: Local development server
@@ -21,6 +21,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GroupsGetResponseADM'
+              example:
+                groups:
+                - descriptions:
+                  - value: NewGroup description in English
+                    language: en
+                  - value: NewGroup Beschreibung auf Deutsch
+                    language: de
+                  id: http://rdfh.ch/groups/0042/a95UWs71KUklnFOe1rcw1w
+                  name: NewGroup
+                  project:
+                    description:
+                    - value: An example project
+                      language: en
+                    id: http://rdfh.ch/projects/0042
+                    keywords:
+                    - example
+                    - project
+                    longname: Example Project
+                    ontologies: []
+                    selfjoin: false
+                    shortcode: '0001'
+                    shortname: example
+                    status: true
+                  selfjoin: false
+                  status: true
         '400':
           description: ''
           content:
@@ -68,6 +93,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GroupGetResponseADM'
+              example:
+                group:
+                  descriptions:
+                  - value: NewGroup description in English
+                    language: en
+                  - value: NewGroup Beschreibung auf Deutsch
+                    language: de
+                  id: http://rdfh.ch/groups/0042/a95UWs71KUklnFOe1rcw1w
+                  name: NewGroup
+                  project:
+                    description:
+                    - value: An example project
+                      language: en
+                    id: http://rdfh.ch/projects/0042
+                    keywords:
+                    - example
+                    - project
+                    longname: Example Project
+                    ontologies: []
+                    selfjoin: false
+                    shortcode: '0001'
+                    shortname: example
+                    status: true
+                  selfjoin: false
+                  status: true
         '400':
           description: ''
           content:
@@ -116,6 +166,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GroupGetResponseADM'
+              example:
+                group:
+                  descriptions:
+                  - value: NewGroup description in English
+                    language: en
+                  - value: NewGroup Beschreibung auf Deutsch
+                    language: de
+                  id: http://rdfh.ch/groups/0042/a95UWs71KUklnFOe1rcw1w
+                  name: NewGroup
+                  project:
+                    description:
+                    - value: An example project
+                      language: en
+                    id: http://rdfh.ch/projects/0042
+                    keywords:
+                    - example
+                    - project
+                    longname: Example Project
+                    ontologies: []
+                    selfjoin: false
+                    shortcode: '0001'
+                    shortname: example
+                    status: true
+                  selfjoin: false
+                  status: true
         '400':
           description: ''
           content:
@@ -168,6 +243,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GroupGetResponseADM'
+              example:
+                group:
+                  descriptions:
+                  - value: NewGroup description in English
+                    language: en
+                  - value: NewGroup Beschreibung auf Deutsch
+                    language: de
+                  id: http://rdfh.ch/groups/0042/a95UWs71KUklnFOe1rcw1w
+                  name: NewGroup
+                  project:
+                    description:
+                    - value: An example project
+                      language: en
+                    id: http://rdfh.ch/projects/0042
+                    keywords:
+                    - example
+                    - project
+                    longname: Example Project
+                    ontologies: []
+                    selfjoin: false
+                    shortcode: '0001'
+                    shortname: example
+                    status: true
+                  selfjoin: false
+                  status: true
         '400':
           description: ''
           content:
@@ -220,6 +320,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GroupGetResponseADM'
+              example:
+                group:
+                  descriptions:
+                  - value: NewGroup description in English
+                    language: en
+                  - value: NewGroup Beschreibung auf Deutsch
+                    language: de
+                  id: http://rdfh.ch/groups/0042/a95UWs71KUklnFOe1rcw1w
+                  name: NewGroup
+                  project:
+                    description:
+                    - value: An example project
+                      language: en
+                    id: http://rdfh.ch/projects/0042
+                    keywords:
+                    - example
+                    - project
+                    longname: Example Project
+                    ontologies: []
+                    selfjoin: false
+                    shortcode: '0001'
+                    shortname: example
+                    status: true
+                  selfjoin: false
+                  status: true
         '400':
           description: ''
           content:
@@ -273,6 +398,140 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GroupMembersGetResponseADM'
+              example:
+                members:
+                - email: user@exampl.com
+                  familyName: Doe
+                  givenName: Jane
+                  groups:
+                  - descriptions:
+                    - value: NewGroup description in English
+                      language: en
+                    - value: NewGroup Beschreibung auf Deutsch
+                      language: de
+                    id: http://rdfh.ch/groups/0042/a95UWs71KUklnFOe1rcw1w
+                    name: NewGroup
+                    project:
+                      description:
+                      - value: An example project
+                        language: en
+                      id: http://rdfh.ch/projects/0042
+                      keywords:
+                      - example
+                      - project
+                      longname: Example Project
+                      ontologies: []
+                      selfjoin: false
+                      shortcode: '0001'
+                      shortname: example
+                      status: true
+                    selfjoin: false
+                    status: true
+                  id: http://rdfh.ch/users/0001
+                  lang: rm
+                  permissions:
+                    administrativePermissionsPerProject: {}
+                    groupsPerProject: {}
+                  projects:
+                  - description:
+                    - value: An example project
+                      language: en
+                    id: http://rdfh.ch/projects/0042
+                    keywords:
+                    - example
+                    - project
+                    longname: Example Project
+                    ontologies: []
+                    selfjoin: false
+                    shortcode: '0001'
+                    shortname: example
+                    status: true
+                  status: true
+                  username: username
+        '400':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GravsearchException'
+        '401':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadCredentialsException'
+        '403':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ForbiddenException'
+        '404':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFoundException'
+      security:
+      - httpAuth: []
+      - httpAuth1: []
+  /admin/groups/{groupIri}/status:
+    put:
+      tags:
+      - Admin Groups
+      description: Updates a group's status.
+      operationId: putAdminGroupsGroupiriStatus
+      parameters:
+      - name: KnoraAuthenticationMFYGSLTEMFZWG2BOON3WS43THI2DIMY9
+        in: cookie
+        required: false
+        schema:
+          type: string
+      - name: groupIri
+        in: path
+        description: The IRI of a group. Must be URL-encoded.
+        required: true
+        schema:
+          type: string
+        example: http://rdfh.ch/groups/0042/a95UWs71KUklnFOe1rcw1w
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GroupStatusUpdateRequest'
+        required: true
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GroupGetResponseADM'
+              example:
+                group:
+                  descriptions:
+                  - value: NewGroup description in English
+                    language: en
+                  - value: NewGroup Beschreibung auf Deutsch
+                    language: de
+                  id: http://rdfh.ch/groups/0042/a95UWs71KUklnFOe1rcw1w
+                  name: NewGroup
+                  project:
+                    description:
+                    - value: An example project
+                      language: en
+                    id: http://rdfh.ch/projects/0042
+                    keywords:
+                    - example
+                    - project
+                    longname: Example Project
+                    ontologies: []
+                    selfjoin: false
+                    shortcode: '0001'
+                    shortname: example
+                    status: true
+                  selfjoin: false
+                  status: true
         '400':
           description: ''
           content:
@@ -2710,7 +2969,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       responses:
         '200':
           description: ''
@@ -2744,7 +3003,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       responses:
         '200':
           description: ''
@@ -2778,7 +3037,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       responses:
         '200':
           description: ''
@@ -2913,7 +3172,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       responses:
         '200':
           description: ''
@@ -2965,7 +3224,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       responses:
         '200':
           description: ''
@@ -3124,7 +3383,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       - name: projectIri
         in: path
         description: The IRI of a project. Must be URL-encoded.
@@ -3183,7 +3442,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       - name: projectIri
         in: path
         description: The IRI of a project. Must be URL-encoded.
@@ -3243,7 +3502,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       - name: projectIri
         in: path
         description: The IRI of a project. Must be URL-encoded.
@@ -3302,7 +3561,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       - name: projectIri
         in: path
         description: The IRI of a project. Must be URL-encoded.
@@ -3362,7 +3621,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       - name: groupIri
         in: path
         description: The IRI of a group. Must be URL-encoded.
@@ -3421,7 +3680,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       - name: groupIri
         in: path
         description: The IRI of a group. Must be URL-encoded.
@@ -3481,7 +3740,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       requestBody:
         content:
           application/json:
@@ -3540,7 +3799,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       requestBody:
         content:
           application/json:
@@ -3599,7 +3858,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       requestBody:
         content:
           application/json:
@@ -3658,7 +3917,7 @@ paths:
         required: true
         schema:
           type: string
-        example: http://rdfh.ch/users/uQnRpDX9Qem3hFko88t9Bg
+        example: http://rdfh.ch/users/D0zKrCVaQPe6RD_6R_GGUg
       requestBody:
         content:
           application/json:
@@ -4061,6 +4320,13 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/User'
+    GroupStatusUpdateRequest:
+      required:
+      - status
+      type: object
+      properties:
+        status:
+          type: boolean
     GroupUpdateRequest:
       type: object
       properties:
