# webapi/src/main/scala/org/knora/webapi/slice/admin/api/GroupsEndpoints.scala
@@ -20,33 +20,36 @@ import org.knora.webapi.slice.admin.api.AdminPathVariables.groupIriPathVar
 import org.knora.webapi.slice.admin.api.GroupsRequests.GroupCreateRequest
 import org.knora.webapi.slice.admin.api.GroupsRequests.GroupStatusUpdateRequest
 import org.knora.webapi.slice.admin.api.GroupsRequests.GroupUpdateRequest
-import org.knora.webapi.slice.admin.domain.model.*
 import org.knora.webapi.slice.admin.domain.model.KnoraProject.*
+import org.knora.webapi.slice.admin.domain.model.*
 import org.knora.webapi.slice.common.api.BaseEndpoints
 
 final case class GroupsEndpoints(baseEndpoints: BaseEndpoints) {
 
   private val base = "admin" / "groups"
 
+  private val groupGetResponse =
+    sprayJsonBody[GroupGetResponseADM].example(Examples.GroupEndpointsExample.groupGetResponseADM)
+
   val getGroups = baseEndpoints.publicEndpoint.get
     .in(base)
-    .out(sprayJsonBody[GroupsGetResponseADM])
+    .out(sprayJsonBody[GroupsGetResponseADM].example(Examples.GroupEndpointsExample.groupsGetResponseADM))
     .description("Return all groups.")
 
   val getGroupByIri = baseEndpoints.publicEndpoint.get
     .in(base / groupIriPathVar)
-    .out(sprayJsonBody[GroupGetResponseADM])
+    .out(groupGetResponse)
     .description("Return a single group identified by its IRI.")
 
   val getGroupMembers = baseEndpoints.securedEndpoint.get
     .in(base / groupIriPathVar / "members")
-    .out(sprayJsonBody[GroupMembersGetResponseADM])
+    .out(sprayJsonBody[GroupMembersGetResponseADM].example(Examples.GroupEndpointsExample.groupGetMembersResponse))
     .description("Return all members of a single group.")
 
   val postGroup = baseEndpoints.securedEndpoint.post
     .in(base)
     .in(zioJsonBody[GroupCreateRequest].example(Examples.GroupEndpointsExample.groupCreateRequest))
-    .out(sprayJsonBody[GroupGetResponseADM])
+    .out(groupGetResponse)
     .name("Create new group")
     .description(
       "**Required permissions**: User must SystemAdmin or ProjectAdmin of the project the group is created in.",
@@ -55,23 +58,23 @@ final case class GroupsEndpoints(baseEndpoints: BaseEndpoints) {
   val putGroup = baseEndpoints.securedEndpoint.put
     .in(base / groupIriPathVar)
     .in(zioJsonBody[GroupUpdateRequest].example(Examples.GroupEndpointsExample.groupUpdateRequest))
-    .out(sprayJsonBody[GroupGetResponseADM])
+    .out(groupGetResponse)
     .description("Update a group's basic information.")
 
   val putGroupStatus = baseEndpoints.securedEndpoint.put
     .in(base / groupIriPathVar / "status")
     .in(zioJsonBody[GroupStatusUpdateRequest])
-    .out(sprayJsonBody[GroupGetResponseADM])
+    .out(groupGetResponse)
     .description("Updates a group's status.")
 
   val deleteGroup = baseEndpoints.securedEndpoint.delete
     .in(base / groupIriPathVar)
-    .out(sprayJsonBody[GroupGetResponseADM])
+    .out(groupGetResponse)
     .description("Deletes a group by changing its status to 'false'.")
 
-  private val securedEndpoins = Seq(getGroupMembers, postGroup, putGroup, deleteGroup).map(_.endpoint)
+  private val securedEndpoints = Seq(getGroupMembers, postGroup, putGroup, putGroupStatus, deleteGroup).map(_.endpoint)
 
-  val endpoints: Seq[AnyEndpoint] = (Seq(getGroups, getGroupByIri) ++ securedEndpoins)
+  val endpoints: Seq[AnyEndpoint] = (Seq(getGroups, getGroupByIri) ++ securedEndpoints)
     .map(_.tag("Admin Groups"))
 }
 
